testing/singularity: use chmod-clean
Replace cleanup_srcdir() with chmod-clean option

--- a/testing/singularity/APKBUILD
+++ b/testing/singularity/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="Application containers focused on reproducibility for scientific comput
 url="https://www.sylabs.io/singularity/"
 arch="all"
 license="BSD-3-Clause BSD-3-Clause-LBNL"
-options="suid !check" # no test suite from upstream
+options="chmod-clean suid !check" # no test suite from upstream
 depends="squashfs-tools"
 makedepends="
 	go
@@ -68,11 +68,6 @@ bashcomp() {
 
 	mv "$pkgdir"/etc/bash_completion.d/singularity \
 		"$subpkgdir"/usr/share/bash-completion/completions/singularity
-}
-
-cleanup_srcdir() {
-	[ -d src ] && chmod -R +w src;
-	default_cleanup_srcdir
 }
 
 sha512sums="460c374fc728124a6fa221ddf60b6393e6c7fd37b4d7dd5e95472148731107e5693fcc192b87886ce910ac7331260d8b9cc6d63ee5fa1515795e0dc45b0fcf3d  singularity-3.5.2.tar.gz"
