testing/go-ipfs: use chmod-clean
Replace cleanup_srcdir() with chmod-clean option

--- a/testing/go-ipfs/APKBUILD
+++ b/testing/go-ipfs/APKBUILD
@@ -9,7 +9,7 @@ arch="x86_64 x86 aarch64 armhf armv7"
 license="MIT Apache-2.0"
 pkgusers="ipfs"
 pkggroups="ipfs"
-options="!check" # No test suite from upstream
+options="chmod-clean !check" # No test suite from upstream
 makedepends="make go bash binutils-gold git gx gx-go"
 install="$pkgname.pre-install $pkgname.post-install"
 subpackages="$pkgname-doc $pkgname-openrc $pkgname-bash-completion:bashcomp:noarch"
@@ -56,12 +56,6 @@ bashcomp() {
 
 	install -Dm 644 "$builddir"/misc/completion/ipfs-completion.bash \
 		"$subpkgdir"/usr/share/bash-completion/completions/$pkgname
-}
-
-cleanup_srcdir() {
-	[ -d src ] && chmod -R +w src; go clean -modcache;
-
-	default_cleanup_srcdir
 }
 
 sha512sums="e763870c9bcb5167a423b11d03989398d598bfc70a2852f7d752f789e2f7c7fc424277ef99abef65c5b2bcbbd17f471ad751fb969daf177e3d68411e630c0b1d  go-ipfs-0.4.23.tar.gz
