community/liborcus: upgrade to 0.15.3

--- a/community/liborcus/APKBUILD
+++ b/community/liborcus/APKBUILD
@@ -1,16 +1,15 @@
 # Contributor: Timo Teräs <timo.teras@iki.fi>
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=liborcus
-pkgver=0.14.1
-pkgrel=3
+pkgver=0.15.3
+pkgrel=0
 pkgdesc="Library for processing spreadsheet documents"
 url="https://gitlab.com/orcus/orcus"
 arch="all"
 license="MPL-2.0"
 makedepends="$depends_dev boost-dev mdds-dev libixion-dev zlib-dev"
 subpackages="$pkgname-dev"
-source="https://kohei.us/files/orcus/src/liborcus-$pkgver.tar.xz
-	"
+source="https://kohei.us/files/orcus/src/liborcus-$pkgver.tar.xz"
 
 build() {
 	./configure \
@@ -32,4 +31,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="a32dc5a652ce99cff37273c38fb9460e13e7bfb562f40c8d0c79b65c33e340daaeeb2c796308ca700b85bfc13cc8215641563b9e9f6d44b7d61adb8e8a3c950f  liborcus-0.14.1.tar.xz"
+sha512sums="bb5495a64ac5f984e107feb36dfe5c801d2ce7e2fcbee8f8bc779d87001e1fcb1d1f70ee2695eb976f1553c59908a15f887ceeb7ccfc556d4476ea846c5036f2  liborcus-0.15.3.tar.xz"
