community/libreoffice: upgrade to 6.4.0.3

--- a/community/libreoffice/APKBUILD
+++ b/community/libreoffice/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Timo Teräs <timo.teras@iki.fi>
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=libreoffice
-pkgver=6.3.4.2
+pkgver=6.4.0.3
 pkgrel=0
 pkgdesc="LibreOffice - Meta package for the full office suite"
 url="https://www.libreoffice.org/"
@@ -32,7 +32,6 @@ makedepends="
 	gpgme-dev
 	gst-plugins-base-dev
 	gstreamer-dev
-	gtk+2.0-dev
 	gtk+3.0-dev
 	harfbuzz-dev
 	hunspell-dev
@@ -81,7 +80,7 @@ makedepends="
 	perl-archive-zip
 	poppler-dev
 	postgresql-dev
-	py-setuptools
+	py3-setuptools
 	python3-dev
 	redland-dev
 	sed
@@ -125,13 +124,13 @@ source="https://download.documentfoundation.org/libreoffice/src/$_v/libreoffice-
 	$_addsrcurl/eeb2c7ddf0d302fba4bfc6e97eac9624-libbase-1.1.6.zip
 	$_addsrcurl/f94d9870737518e3b597f9265f4e9803-libserializer-1.1.6.zip
 	$_addsrcurl/lxml-4.1.1.tgz
-	$_addsrcurl/pdfium-3794.tar.bz2
+	$_addsrcurl/pdfium-3963.tar.bz2
+	$_addsrcurl/QR-Code-generator-1.4.0.tar.gz
 	https://dev-www.libreoffice.org/extern/185d60944ea767075d27247c3162b3bc-unowinreg.dll
 	https://dev-www.libreoffice.org/extern/884ed41809687c3e168fc7c19b16585149ff058eca79acbf3ee784f6630704cc-opens___.ttf
 
 	linux-musl.patch
 	fix-execinfo.patch
-	fix-includes.patch
 	disable-liborcus-unittest.patch
 	musl-stacksize.patch
 	musl-libintl.patch
@@ -326,6 +325,7 @@ build() {
 		--with-jdk-home="/usr/lib/jvm/default-jvm" \
 		--with-ant-home="/usr/share/java/apache-ant" \
 		--without-system-jars \
+		--without-system-qrcodegen \
 		--without-junit \
 		--without-fonts \
 		--without-system-sane \
@@ -430,9 +430,9 @@ sdk_doc() {
 	_split sdk_doc
 }
 
-sha512sums="2ed687ae805da36635419729066a2924f1e38a6b0f8d2692c42b366450a261012adfcd8a5d7915d9cfd292d07519fc32c596cdb56d7be6b12a49618b18d6f3d2  libreoffice-6.3.4.2.tar.xz
-7e396d313122a30294b979c1d17799d3b9f8a6c5d40ed14d34283ab5cf96023d21aafd51a750298c4a859e77e57381f3523dda2f43c87c2ac9bb45aa3cf525c6  libreoffice-dictionaries-6.3.4.2.tar.xz
-5199df82139318e9c8d7cd3e41bb99177c5726f7571ce5acacd40b5fbe32ced7efb606897f794dd0f271483595cb0bfc50f8c2750638b15a4a97889a0791e51d  libreoffice-translations-6.3.4.2.tar.xz
+sha512sums="1ea4b5865b7ad7d7400a775e153b00aa01d188844b580b26adb0d513db5f29a880cac145a746f139d236fff8fb5e8ed316943551de2e2eea218ab96bf177ca42  libreoffice-6.4.0.3.tar.xz
+6e6bd33c86b6fe0744b9db70982aca8032011ceda55db30a8214b822dd77ad4760518f58aa42fed10996081ce91bf791fc332a8273664d5dd2141cc88eaaba97  libreoffice-dictionaries-6.4.0.3.tar.xz
+168800ec5526f69febf6f37df4d04c0c42d26595587339721141c40c9812d9398bef7618732244759d65b4ccf46072b65536504c37c95f73e1ab91e6582ee75d  libreoffice-translations-6.4.0.3.tar.xz
 a231eba4a1baca11766ef292ab45e302081115477fe23018652882923308856835cf8c9ecba61a5cf22543474ccef3136965d794a90c9e4e9e6dcc21f9af6e1a  17410483b5b5f267aa18b7e00b65e6e0-hsqldb_1_8_0.zip
 9fe106bbdb55365f589246e5a0d10bbe9b35224132b66a1823dc6361633a67f2acc0e8c393dc7ed70d086858d16d242b8806b8b2184c98e3d20d0be85bed9c44  3404ab6b1792ae5f16bbd603bd1e1d03-libformula-1.1.7.zip
 4a48f1e32907fb2dee601cda3cd7a0d7198b2d51f2a572b647f1e93f901fd511eef3567676e52dfb1723a2cdfbc01f2015ca0bb22903b0bc1476dd618cc9aa8a  35c94d2df8893241173de1d16b6034c0-swingExSrc.zip
@@ -450,12 +450,12 @@ a04eca6a57807358bd4f8d017a2eeaa58403ef51fab11fc46ab089113a0ff5f66aaa793d3fc57b48
 9091d3628d9c75c068507537afc9e10bfb79c1abfd36ad697af3d592a1cc049ba6640f665bfc53cc520b6a26c21d70b0275106843444b441484c2178f2784743  eeb2c7ddf0d302fba4bfc6e97eac9624-libbase-1.1.6.zip
 c1a15ebbfe817ec79d4b3f1c97d096bf8511737d7d35d97302856ccfb3de14a1cd16bd31000415d9ab24bbd9ef770d37855cee4b819ff0e8fca2f2766920a114  f94d9870737518e3b597f9265f4e9803-libserializer-1.1.6.zip
 9542e5206f9b2f9e072c52ef8e6cf44d1aaae8ae3e7ca7e820c1fac12e716503308ccb3cebc52155b4c93799f3ebca247781fc491524d004378bd26f5cddb9d1  lxml-4.1.1.tgz
-56cf1bc0afab277aa00f9ac779a95919405566a40a4f914e379983907ee3bffaf8f500a64e8c5559daf5c4f831d1daab80f39ed4e492c2e010f09a2af0d00221  pdfium-3794.tar.bz2
+b4f47cf210314de3ab5a7cfb913ea6109894d3c6bd6ac0d3aed3629e6bf733ef0f6af122bd8b8a475389fe2a28f7eae66c07a22b80a7c142c1075b2e5aa8ff90  pdfium-3963.tar.bz2
+314a757bfdf9a38bcf07fd7a0103d28a2d1dd7311b8234761304efeef7bfdb740db78ab01e6b67e99a28d523cc2be9c1073b2de9d65e853d191c3dad19af56d0  QR-Code-generator-1.4.0.tar.gz
 854b8ae29b57b40ba6bb6ff66e723a0e8dad053fcc2849f0ad763cd8a31352f4aeba9636fd4e3f0f2a0cd985a6f49b4261b9ace68d6be821ed42cfa7a73eb13c  185d60944ea767075d27247c3162b3bc-unowinreg.dll
 ce7e23e750f2c6f7ff2e590cc8941caa18eaae2727c9ca31313ab72ab19278055bd9393d38b0b5b685594e2f04ee15cb83b3bbb25d09665fe7383d7f26bf2ae8  884ed41809687c3e168fc7c19b16585149ff058eca79acbf3ee784f6630704cc-opens___.ttf
-81207be7cb9d65664d96cc8f7f36b2da5642b6d8529346b638812a59303b08d881bd0552cc4accac2205293442324dc34a067dcf0daa713880311b67916bae98  linux-musl.patch
+e82eae19462f089ba37ffac3ee5e5834fa0fe93ed3e4b2cd2cb46546cc84137c9cb377910e0d91cc0727892cd93e2d957e144ec31139e76d9dc4a2f2609acec9  linux-musl.patch
 c2970c482b3d6557272fe07eda236613176662dd0b789a24dbbea17a33cb6aa55d981feb96a650298828d5cb3e7f51040ca7577ea6fde595321dc22e99e14248  fix-execinfo.patch
-0591099d4e650601b180e80910cd0de9a904713087f189e4ceac96b9ec5654010c2b60fe17177c134f27acc02a753ad37c3b4866299585e1a9ae8667d895fe1a  fix-includes.patch
 83081b999cedb631122d59d77f74b60adf97e412de924306e35d8d7975e5f5d17694907166136cb865f30c51d8669b79e871d6e8450c8b0038e7d6cdee5cdc02  disable-liborcus-unittest.patch
 9abb0b14b7c408705569f26f6ed6519630ee7b98ff9c959eb53bb5efec6c08cae906f3c82943aee21098ab09c6caf58443a0dbe347d7dc5c8b6637f3665abca2  musl-stacksize.patch
 d99d074e89e2713a3b6a56fa60d9d989ca6eefc8884ccbf88cb16c7b09da6dde4ba4ebc6a4d8408b61a08088df7cb1bcda60738f91e5569179fc45d7e9b901a3  musl-libintl.patch"
