main/dahdi-linux: modernize
use https, fix license and remove unneeded bits

--- a/main/dahdi-linux/APKBUILD
+++ b/main/dahdi-linux/APKBUILD
@@ -4,24 +4,19 @@ pkgname=dahdi-linux
 pkgver=3.1.0
 pkgrel=0
 pkgdesc="Firmware for Digium Asterisk Hardware Device Interface drivers"
-url="http://www.asterisk.org"
+url="https://www.asterisk.org"
 arch="noarch"
-license="GPL"
+license="GPL-2.0-only"
 makedepends="wget tar"
 subpackages="$pkgname-dev"
-source="http://downloads.digium.com/pub/telephony/dahdi-linux/releases/dahdi-linux-$pkgver.tar.gz"
+source="https://downloads.digium.com/pub/telephony/dahdi-linux/releases/dahdi-linux-$pkgver.tar.gz"
 
 # We online install the firmwares in this package since those are common for all
 # kernel flavors. We also install the headers for the -dev package.
 #
 # The kernel drivers themselves are built from separate build recipe.
 
-build() {
-	return 0
-}
-
 package() {
-	cd "$srcdir"/$pkgname-$pkgver
 	make -j1 DESTDIR="$pkgdir" HOTPLUG_FIRMWARE=yes \
 		install-include install-firmware
 }
