main/py3-jinja2: upgrade to 2.11.0
Changelog:
https://github.com/pallets/jinja/blob/master/CHANGES.rst#version-2110

Set PYTHONPATH to avoid an ImportError while running check():

    ImportError while loading conftest '/home/builder/aports/main/py3-jinja2/src/Jinja2-2.11.0/tests/conftest.py'.
    tests/conftest.py:6: in <module>
        from jinja2 import Environment
    E   ModuleNotFoundError: No module named 'jinja2'

--- a/main/py3-jinja2/APKBUILD
+++ b/main/py3-jinja2/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Matt Smith <mcs@darkregion.net>
 pkgname=py3-jinja2
 _pkgname=Jinja2
-pkgver=2.10.3
+pkgver=2.11.0
 pkgrel=0
 pkgdesc="A small but fast and easy to use stand-alone python template engine"
 url="https://palletsprojects.com/p/jinja/"
@@ -22,7 +22,7 @@ build() {
 
 check() {
 	cd "$builddir"
-	python3 -m pytest .
+	PYTHONPATH="$builddir/src" python3 -m pytest .
 }
 
 package() {
@@ -48,4 +48,4 @@ vim() {
 		"$subpkgdir"/usr/share/vim/vimfiles/syntax/jinja.vim
 }
 
-sha512sums="c51c335450f46a467b0d40de1a51c149bdb4eb961ea888b64ff141e11b592b32e05040bfd9aa4a39892dda8d9d8cbf5a35b386ea16a247484d31b5b52eda1b8f  Jinja2-2.10.3.tar.gz"
+sha512sums="7df8a0d5834209552f1c77b28f88ac07d8be9a70e2ced27fef913c8f97a19bdad90238c21229b905407ce36ace52078d81407ce87f450c97368feaade2e0fa5f  Jinja2-2.11.0.tar.gz"
