main/linux-lts: incorporate Platform files in -dev packages
needed for MIPS kernels

--- a/main/linux-lts/APKBUILD
+++ b/main/linux-lts/APKBUILD
@@ -205,7 +205,7 @@ _dev() {
 	find .  -path './include/*' -prune \
 		-o -path './scripts/*' -prune -o -type f \
 		\( -name 'Makefile*' -o -name 'Kconfig*' -o -name 'Kbuild*' -o \
-		   -name '*.sh' -o -name '*.pl' -o -name '*.lds' \) \
+		   -name '*.sh' -o -name '*.pl' -o -name '*.lds' -o -name 'Platform' \) \
 		-print | cpio -pdm "$dir"
 
 	cp -a scripts include "$dir"
