main/p11-kit: upgrade to 0.23.20

--- a/main/p11-kit/APKBUILD
+++ b/main/p11-kit/APKBUILD
@@ -1,49 +1,38 @@
 # Contributor: Fabian Affolter <fabian@affolter-engineering.ch>
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=p11-kit
-pkgver=0.23.18.1
+pkgver=0.23.20
 pkgrel=0
 pkgdesc="Library for loading and sharing PKCS#11 modules"
 url="https://p11-glue.freedesktop.org/"
 arch="all"
 license="BSD-3-Clause"
-makedepends="libtasn1-dev libffi-dev"
+makedepends="meson libtasn1-dev libffi-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-trust $pkgname-server"
-source="https://github.com/p11-glue/p11-kit/releases/download/$pkgver/p11-kit-$pkgver.tar.gz"
+source="https://github.com/p11-glue/p11-kit/releases/download/$pkgver/p11-kit-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
-		--sysconfdir=/etc \
+	meson \
 		--prefix=/usr \
-		--mandir=/usr/share/man \
-		--with-trust-paths=/etc/ssl/certs/ca-certificates.crt
-	make
+		. output
+	ninja -C output
 }
 
 check() {
-	cd "$builddir"
-	make check
+	ninja -C output test
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install
-	mkdir -p "$pkgdir"/usr/share/doc/$pkgname
-	mv "$pkgdir"/etc/pkcs11/pkcs11.conf.example "$pkgdir"/usr/share/doc/$pkgname/
+	DESTDIR="$pkgdir" ninja -C output install
+	install -Dm644 "$pkgdir"/etc/pkcs11/pkcs11.conf.example -t "$pkgdir"/usr/share/doc/$pkgname
 }
 
 trust() {
 	pkgdesc="System trust module from $pkgname"
 	mkdir -p "$subpkgdir"/usr/share/p11-kit/modules \
-		"$subpkgdir"/usr/libexec/p11-kit \
 		"$subpkgdir"/usr/lib/pkcs11 \
 		"$subpkgdir"/usr/bin
 
-	mv "$pkgdir"/usr/libexec/p11-kit/trust-extract-compat \
-		"$subpkgdir"/usr/libexec/p11-kit/
 	mv "$pkgdir"/usr/share/p11-kit/modules/p11-kit-trust.module \
 		"$subpkgdir"/usr/share/p11-kit/modules/
 	mv "$pkgdir"/usr/lib/pkcs11/p11-kit-trust.so \
@@ -62,4 +51,4 @@ server() {
 		"$subpkgdir"/usr/libexec/p11-kit
 }
 
-sha512sums="941996aea75025dad5dfc6f9b4609bc92bc0888d5b2b58de0d498d6cf75d059421405d9c3bad51122108b6ad1e41e434609ead23404efe635cdb806836ccadbd  p11-kit-0.23.18.1.tar.gz"
+sha512sums="1eb88773fdd49dd48c7e089744e9dbbf6c1033a4863f3bfe75a68d842804baa3c373cb1b28ee625dd69a6e16c89df4ac755e0928495dccf38c007c530f6cfa57  p11-kit-0.23.20.tar.xz"
