community/openal-soft: upgrade to 1.20.1

--- a/community/openal-soft/APKBUILD
+++ b/community/openal-soft/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor:
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=openal-soft
-pkgver=1.20.0
+pkgver=1.20.1
 pkgrel=0
 pkgdesc="software implementation of OpenAL API"
 url="https://kcat.strangesoft.net/openal.html"
@@ -10,10 +10,10 @@ license="LGPL-2.0-or-later"
 depends_dev="alsa-lib-dev"
 makedepends="$depends_dev linux-headers cmake"
 subpackages="$pkgname-dev"
-source="http://kcat.strangesoft.net/openal-releases/${pkgname}-${pkgver}.tar.bz2"
+source="http://kcat.strangesoft.net/openal-releases/openal-soft-$pkgver.tar.bz2"
 options="!check"
 
-builddir="${srcdir}/${pkgname}-${pkgver}/build"
+builddir="$srcdir/$pkgname-$pkgver/build"
 
 prepare() {
 	default_prepare
@@ -36,4 +36,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="7b103ffeeb8a6541d4bd31245ca5e34fec27d121fe04c21655480fb3907604f4171f912411f1e49622ec27db79d6cb85eb452ed78523abc906f18af57ffb755e  openal-soft-1.20.0.tar.bz2"
+sha512sums="a8a03a2162b5d35e66adc079e81d7fa075b83a3ee1cec3412cb40f7789263ed8bd005beefb7ef995f464dfa43aac22ea0f547b752dfc7533ed9120a95fb92513  openal-soft-1.20.1.tar.bz2"
