--- a/testing/perl-sereal-decoder/APKBUILD
+++ b/testing/perl-sereal-decoder/APKBUILD
@@ -3,16 +3,15 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=perl-sereal-decoder
 _pkgreal=Sereal-Decoder
-pkgver=4.007
-pkgrel=1
+pkgver=4.008
+pkgrel=0
 pkgdesc="Fast, compact, powerful binary deserialization"
 url="https://metacpan.org/release/Sereal-Decoder"
 arch="all"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpancheckdepends="perl-test-longstring perl-test-warn"
 depends="perl"
 makedepends="perl-dev zstd-dev"
-checkdepends="$cpancheckdepends"
+checkdepends="perl-test-longstring perl-test-warn"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/Y/YV/YVES/Sereal-Decoder-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
@@ -39,4 +38,4 @@ check() {
 	make test
 }
 
-sha512sums="a316261923d0b76962544df19fbb95bbf15659dd0a3a18bc1ef68ab5db1ad1e2492d65e2b753b4d2bab001d398da9cdcc2e29447d6ae6f773b4dabc7adc082b1  Sereal-Decoder-4.007.tar.gz"
+sha512sums="81b071bf490374edcdb9536506108989ceec8bffc27131b1bda58dadeeb6b7f8c2484a26fabf611de8fe42bbf9cd513b170f8c73c5918b3a18c9696453796e29  Sereal-Decoder-4.008.tar.gz"
