--- a/testing/perl-sereal-encoder/APKBUILD
+++ b/testing/perl-sereal-encoder/APKBUILD
@@ -3,15 +3,14 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=perl-sereal-encoder
 _pkgreal=Sereal-Encoder
-pkgver=4.007
-pkgrel=2
+pkgver=4.008
+pkgrel=0
 pkgdesc="Fast, compact, powerful binary serialization"
 url="https://metacpan.org/release/Sereal-Encoder"
 arch="all"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpancheckdepends="perl-test-warn perl-test-longstring perl-sereal-decoder"
 makedepends="perl-dev zstd-dev"
-checkdepends="$cpancheckdepends"
+checkdepends="perl-test-warn perl-test-longstring perl-sereal-decoder"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/Y/YV/YVES/Sereal-Encoder-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
@@ -43,4 +42,4 @@ check() {
 	make test
 }
 
-sha512sums="cd0cc13993f71cafa496790cec679828a18eedb933c63675adff25bc8cae0a21073b5845a91f8022195225d925f1b49289c62b6faa44bb773384d371bc5a2046  Sereal-Encoder-4.007.tar.gz"
+sha512sums="34120bd8fdcf6a5fb382373673a4c0cc87b38b86b9d548da098fd4fee5ef9d7eb0283681633f6d79825da98022f6ca44206e2666a9e613c28eed5d5a98d3fb45  Sereal-Encoder-4.008.tar.gz"
