testing/perl-sereal: upgrade to 4.008

--- a/testing/perl-sereal/APKBUILD
+++ b/testing/perl-sereal/APKBUILD
@@ -3,17 +3,15 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=perl-sereal
 _pkgreal=Sereal
-pkgver=4.007
+pkgver=4.008
 pkgrel=0
 pkgdesc="Fast, compact, powerful binary (de-)serialization"
 url="https://metacpan.org/release/Sereal"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-sereal-decoder perl-sereal-encoder"
-cpancheckdepends="perl-test-warn perl-test-longstring"
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
-checkdepends="$cpancheckdepends"
+depends="perl perl-sereal-decoder perl-sereal-encoder"
+makedepends="perl-dev"
+checkdepends="perl-test-warn perl-test-longstring"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/Y/YV/YVES/Sereal-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
@@ -45,4 +43,4 @@ check() {
 	make test
 }
 
-sha512sums="1e44c2b9affc282d1c966b4549667634a4f23becf416ed6eb37fb5bcbf7e1cdbe88697043454bd6398805801f6250aaecd8a5895b6761342278a40f87f24b69a  Sereal-4.007.tar.gz"
+sha512sums="2d2fa89256df06c1331f4024e3251f92688965ce6ae04f4287471a0cc8ebf6ae56ca0a5d616dcf9af4eb03389d713bf533836b7e38f6ca7d5d1bb78960bc97b1  Sereal-4.008.tar.gz"
