testing/nomad: upgrade to 0.10.3

--- a/testing/nomad/APKBUILD
+++ b/testing/nomad/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Matthias Neugebauer <mtneug@mailbox.org>
 # Maintainer: Matthias Neugebauer <mtneug@mailbox.org>
 pkgname=nomad
-pkgver=0.10.2
+pkgver=0.10.3
 pkgrel=0
 pkgdesc="An easy-to-use, flexible, and performant workload orchestrator"
 url="https://www.nomadproject.io/"
@@ -21,6 +21,20 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/hashicorp/nomad/archive/v$pk
 	ui-upgrade-node-sass.patch"
 
 builddir="$srcdir/src/github.com/hashicorp/$pkgname"
+
+# secfixes:
+#   0.10.3-r0:
+#     - CVE-2020-7218
+#     - CVE-2020-7218
+#   0.9.6-r0:
+#     - CVE-2019-12741
+#     - CVE-2019-15928
+#     - CVE-2019-16742
+#   0.9.5-r0:
+#     - CVE-2019-14802
+#     - CVE-2019-14803
+#   0.9.2-r0:
+#     - CVE-2019-12618
 
 prepare() {
 	mkdir -p "$srcdir/src/github.com/hashicorp"
@@ -49,7 +63,7 @@ package() {
 	install -m750 -o root -g root -d "$pkgdir/var/lib/$pkgname"
 }
 
-sha512sums="6da8398552b60d79196a83f2f4bbc8f9751d9c29dcc01206b4da9ea6746ec92875d49400630c4a993706682bedb7c8eac7a2e3d96a8ac62d2ee38d22889d7c15  nomad-0.10.2.tar.gz
+sha512sums="7b8523129be7d44476cbef5c97d7ac2a51c86019e24e34ba6e931d98dea67e3ecd708a488a28cfaa28e14cc4d1e2e563551ff928f4f5643bb1cb31be681449f6  nomad-0.10.3.tar.gz
 ac969c81150ba57871c1f75f17c11d06ffc7bcc872882416c7c0d9d43f5e352ca1b7e7bfd75e32a9d01a826496c77a657dc298f5e048f85b4d9e85bc3afee51d  nomad.initd
 a4fcc9f319926e8e5257dcc902cf3e1cbacd8bee82097b7a9719611d52037431a7e953a4b0fa90fc25475d2590cd14877c8e4c87bd909dd0099a754ba6f5063c  nomad.confd
 e9c0161c2a9c0e1933c266520a410764a709c7b4f65b1a81c1fb2494eae89daa847ffca5df46d6eea61d855f35d21e66433ec0afe8c08017187c917e952b8544  nvidia-driver.patch
