--- a/main/inotify-tools/APKBUILD
+++ b/main/inotify-tools/APKBUILD
@@ -1,25 +1,25 @@
 # Contributor:
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
-pkgname="inotify-tools"
-pkgver=3.20.1
-pkgrel=1
+pkgname=inotify-tools
+pkgver=3.20.2
+pkgrel=0
 pkgdesc="C library and CLI tools providing a simple interface to inotify"
 url="https://github.com/rvoicilas/inotify-tools"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-only"
 makedepends="automake autoconf libtool"
 subpackages="$pkgname-dev $pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/rvoicilas/$pkgname/archive/$pkgver.tar.gz"
-builddir="$srcdir"/$pkgname-$pkgver
+source="$pkgname-$pkgver.tar.gz::https://github.com/rvoicilas/inotify-tools/archive/$pkgver.tar.gz"
 
 prepare() {
 	default_prepare
+	touch README
 	autoreconf -vif
 }
 
 build() {
-	cd "$builddir"
-	./configure --prefix=/usr \
+	./configure \
+		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info
@@ -27,13 +27,11 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="a97d27e6033036f0db5c0737bee3510206db9f4c843f0d18f1b2e179e838624ea33316c34fd9917c158dbb3580367908e90042fb1bfb146f150c32833b0b2ff2  inotify-tools-3.20.1.tar.gz"
+sha512sums="15a7a6ba34736f6a148db01c003eb635152d88f07c565998b4dd41b90472eec4420e27819ee49d10b90c8434a40eba7a0dbf06edfbe2065620acd61017a58fbd  inotify-tools-3.20.2.tar.gz"
