--- a/testing/volatility3/APKBUILD
+++ b/testing/volatility3/APKBUILD
@@ -3,11 +3,11 @@
 pkgname=volatility3
 pkgver=1.0.0_beta1
 _pkgver=${pkgver/_beta1/-beta.1}
-pkgrel=1
+pkgrel=2
 pkgdesc="Volatile memory forensics toolkit"
 url="https://github.com/volatilityfoundation/volatility3"
 arch="noarch !armhf !armv7" # py3-yara
-license="GPL-2.0"
+license="custom"
 depends="py3-crypto py3-capstone py3-yara"
 makedepends="py3-setuptools"
 source="$pkgname-$pkgver.tar.gz::https://github.com/volatilityfoundation/volatility3/archive/v$_pkgver.tar.gz"
@@ -23,6 +23,7 @@ check() {
 
 package() {
 	python3 setup.py install --root "$pkgdir"
+	install -Dm644 LICENSE.txt "$pkgdir/usr/share/licenses/$pkgname/LICENSE.txt"
 }
 
 sha512sums="28118e1c1e0092d10279f925296148ab312036daec74f4a3615c275f85fb927e2a38b27f7a9472e335b8eb5f41cd668273e549f2e593d774a33e31159988bde2  volatility3-1.0.0_beta1.tar.gz"
