testing/xca: upgrade to 2.2.1
modernize APKBUILD

--- a/testing/xca/APKBUILD
+++ b/testing/xca/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Milan P. Stanić <mps@arvanta.net>
 # Maintainer: Milan P. Stanić <mps@arvanta.net>
 pkgname=xca
-pkgver=2.1.2
+pkgver=2.2.1
 pkgrel=0
 pkgdesc="X Certificate and Key Management"
 url="https://hohnstaedt.de/xca/"
@@ -11,11 +11,10 @@ options="!check" # no tests
 depends="qt5-qtbase-sqlite"
 makedepends="qt5-qttools-dev openssl-dev libtool"
 subpackages="$pkgname-doc"
-source="https://github.com/chris2511/${pkgname}/releases/download/RELEASE.${pkgver}/${pkgname}-${pkgver}.tar.gz"
-builddir="$srcdir/"$pkgname-$pkgver
+source="https://github.com/chris2511/xca/releases/download/RELEASE.$pkgver/xca-$pkgver.tar.gz"
+builddir="$srcdir/"xca-$pkgver
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -27,8 +26,7 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make destdir="$pkgdir" install
 }
 
-sha512sums="1f104a22b83b802576b4820b7139971da50f9b3dd70aca8e1199e996bad4379b8681bb31b197b84a3dfa49cef4ae093f6622d15fac9667547ff47af43c1e5f07  xca-2.1.2.tar.gz"
+sha512sums="90eaf4a859779d57a4c0201dc403d67e005bd540145b9f543e13b8d5c42199f2ea05543de24b071d19a0db8e5b1e9f3bef2aea4bfe9f71f81007a5f5bb3ba406  xca-2.2.1.tar.gz"
