testing/dino: upgrade to 0.1.0

--- a/testing/dino/APKBUILD
+++ b/testing/dino/APKBUILD
@@ -1,8 +1,7 @@
 # Contributor: Galen Abell <galen@galenabell.com>
 # Maintainer: Galen Abell <galen@galenabell.com>
 pkgname="dino"
-pkgver="0_git20200122"
-_pkgsha="3b0a27e14bcce3a06f0ac1199bb0acb5c3434444"
+pkgver="0.1.0"
 pkgrel=0
 pkgdesc="Modern Jabber/XMPP client"
 url="https://dino.im"
@@ -24,8 +23,7 @@ makedepends="
 	ninja
 "
 subpackages="$pkgname-lang"
-source="$pkgname-$_pkgsha.tar.gz::https://github.com/dino/dino/archive/$_pkgsha.tar.gz"
-builddir="$srcdir/$pkgname-$_pkgsha"
+source="https://github.com/dino/dino/releases/download/v$pkgver/dino-$pkgver.tar.gz"
 
 build() {
 	./configure \
@@ -47,4 +45,4 @@ check() {
 package() {
 	make DESTDIR="$pkgdir" install
 }
-sha512sums="6d06489c031f9530fa73e0f300339eedefcf9d61d6a5df2f61070d75d04c4305895f074317ddb6e4dde878f714fce191e72717f8acb77a5d18f505c5062ef59e  dino-3b0a27e14bcce3a06f0ac1199bb0acb5c3434444.tar.gz"
+sha512sums="b63bf87dbf7f728f038f22d0dba34770a06d7eb1be2ec249293ff876e16c151165add895ff3cb20a3216c3581d20e10634d454ee8b024b895012efb34f9d7de8  dino-0.1.0.tar.gz"
