community/elogind: upgrade to 243.4

--- a/community/elogind/APKBUILD
+++ b/community/elogind/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=elogind
-pkgver=241.4
+pkgver=243.4
 pkgrel=0
 pkgdesc="Standalone fork of systemd's elogind"
 url="https://github.com/elogind/elogind"
@@ -11,6 +11,7 @@ depends="dbus shadow"
 options="!check" # Tests fail on builders
 makedepends="
 	meson
+	coreutils
 	docbook-xsl
 	gettext-dev
 	git
@@ -34,10 +35,7 @@ subpackages="
 	lib$pkgname:libs
 	$pkgname-zsh-completion:zshcomp:noarch
 	$pkgname-bash-completion:bashcomp:noarch"
-source="
-	$pkgname-$pkgver.tar.gz::https://github.com/elogind/elogind/archive/v$pkgver.tar.gz
-	reverse_DISABLE_BUFFER_in_cg_attach.patch
-	reverse_CLOSE_ON_EXEC_removal.patch"
+source="$pkgname-$pkgver.tar.gz::https://github.com/elogind/elogind/archive/v$pkgver.tar.gz"
 
 build() {
 	[ "$CARCH" == "s390x" ] && export CFLAGS="$CFLAGS -D__IGNORE_pkey_mprotect -DSO_PEERSEC=31"
@@ -90,6 +88,4 @@ bashcomp() {
 	mv "$pkgdir"/usr/share/bash-completion "$subpkgdir"/usr/share
 }
 
-sha512sums="e1685ac81028eab4a4cf63c7b962ae85f07bc0e39b2562934f863bfdf39417445c432fab5454e7c64b337ab62d95fb69abbe1139464a059a86fb485ed0534ad8  elogind-241.4.tar.gz
-52db50ddd1002736fbbbacb1f8142c624cd78d0177bdc6b5669a54b2e59250903bc1b2639333b0563e382b86cf10cd06f159e9391f7e9224932bebfff3056f60  reverse_DISABLE_BUFFER_in_cg_attach.patch
-46799574b42eb0974f1648f703e86215571e040463c2957b9aca01b14924677d33d17d68680dafcde6d269062e23be001231d39f0c92e078a8b89c4e531447bb  reverse_CLOSE_ON_EXEC_removal.patch"
+sha512sums="9751a3d0ed65dd73d9363097ee1752d437d5636db2a4137395596e0c81e04d4715f314568d1d7c6f367f1ecbda011086cb165bd4dc207302626b16e693cd0a02  elogind-243.4.tar.gz"
