--- a/testing/sbcl/APKBUILD
+++ b/testing/sbcl/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 pkgname=sbcl
 pkgver=2.0.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Steel Bank Common Lisp"
 url="http://www.sbcl.org/"
 arch="x86_64 armv7" #aarch64 is WIP
@@ -43,7 +43,7 @@ prepare() {
 }
 
 build() {
-	all_arch_conf='--prefix=/usr --with-sb-test --with-sb-unicode --with-sb-core-compression'
+	all_arch_conf='--with-sb-test --with-sb-unicode --with-sb-core-compression'
 
 	case "$CARCH" in
 		armv7) conf="$all_arch_conf" ;;
@@ -51,7 +51,7 @@ build() {
 		*) conf="$all_arch_conf --with-sb-thread" ;;
 	esac
 
-	GNUMAKE=make ./make.sh ecl "$conf"
+	GNUMAKE=make ./make.sh ecl --prefix=/usr $conf
 }
 
 package() {
