community/orca: disable on armhf
Dependency gst-plugins-good is missing.

--- a/community/orca/APKBUILD
+++ b/community/orca/APKBUILD
@@ -5,7 +5,7 @@ pkgver=3.34.2
 pkgrel=0
 pkgdesc="Orca is an extensible screen reader"
 url="https://wiki.gnome.org/Projects/Orca"
-arch="noarch"
+arch="noarch !armhf" # missing gst-plugins-good
 license="LGPL-2.1-or-later"
 depends="python3 py3-gobject3 gtk+3.0 gst-plugins-good at-spi2-core
 	py3-atspi atk py3-xdg"
