--- a/main/gnu-efi/APKBUILD
+++ b/main/gnu-efi/APKBUILD
@@ -4,20 +4,21 @@ pkgver=3.0.11
 pkgrel=0
 pkgdesc="Development Libraries and headers for EFI"
 url="ftp://ftp.hpl.hp.com/pub/linux-ia64"
-arch="aarch64 x86 x86_64"
+arch="all !s390x !ppc64le"
 license="BSD-3-Clause"
 subpackages="$pkgname-dev"
 depends_dev="$pkgname"
-source="https://downloads.sourceforge.net/project/gnu-efi/gnu-efi-$pkgver.tar.bz2"
+source="https://downloads.sourceforge.net/project/gnu-efi/gnu-efi-$pkgver.tar.bz2
+	no-werror.patch
+	"
 
 build() {
-	cd "$builddir"
 	make -j1
 }
 
 package() {
-	cd "$builddir"
 	make PREFIX=/usr INSTALLROOT="$pkgdir" install
 }
 
-sha512sums="1a6b06b69eb95e03c00fb1c476bf346ab2cb0ecca9a44e163f52f2aa4b9837d3dd2d3ed8b4ce77aaf32a66e49f826ea5b43a97c8c7c56aaa030bc20b3415122a  gnu-efi-3.0.11.tar.bz2"
+sha512sums="1a6b06b69eb95e03c00fb1c476bf346ab2cb0ecca9a44e163f52f2aa4b9837d3dd2d3ed8b4ce77aaf32a66e49f826ea5b43a97c8c7c56aaa030bc20b3415122a  gnu-efi-3.0.11.tar.bz2
+f384597dc967cc9b1cf738d4002dc75847606c8ab10efbaf9e23844c767f5b9a33518374321b2ae5c5d7e4c9c3abaed996d0690ea81a7906355cabec1426d248  no-werror.patch"
