--- a/testing/celery/APKBUILD
+++ b/testing/celery/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=celery
-pkgver=4.3.0
-pkgrel=4
+pkgver=4.4.0
+pkgrel=0
 pkgdesc="An asynchronous task queue/job queue based on distributed message passing"
 url="http://www.celeryproject.org/"
 arch="noarch !s390x" # lmited by py3-kombu
@@ -9,43 +9,38 @@ license="Apache-2.0"
 depends="py3-urllib3 py3-redis py3-vine py3-kombu py3-billiard py3-tz"
 makedepends="python3-dev py3-setuptools"
 install="$pkgname.pre-install"
-source="https://files.pythonhosted.org/packages/source/${pkgname:0:1}/$pkgname/$pkgname-$pkgver.tar.gz
+source="https://files.pythonhosted.org/packages/source/c/celery/celery-$pkgver.tar.gz
 	celery.confd
 	celery.initd"
 pkgusers="celery"
 pkggroups="celery"
 subpackages="$pkgname-openrc"
-builddir="$srcdir/"$pkgname-$pkgver
 provides="py3-celery"
 
 # TODO: requires many many many dependencies
 options="!check"
 
 build() {
-	cd "$builddir"
 	python3 setup.py build
 }
 
 package() {
-	cd "$builddir"
-
-	install -dm755 "$pkgdir/$confdir" || return 1
-	install -dm755 "$pkgdir/$confdir/conf.d" || return 1
+	install -dm755 "$pkgdir/$confdir"
+	install -dm755 "$pkgdir/$confdir/conf.d"
 
 	# install scripts
 	install -m755 -D "$srcdir"/$pkgname.initd \
-		"$pkgdir"/etc/init.d/$pkgname || return 1
+		"$pkgdir"/etc/init.d/$pkgname
 	install -m644 -D "$srcdir"/$pkgname.confd \
-		"$pkgdir"/etc/conf.d/$pkgname || return 1
+		"$pkgdir"/etc/conf.d/$pkgname
 
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
 check() {
-	cd "$builddir"
 	python3 setup.py test
 }
 
-sha512sums="91dd16bd6c9544c76d84e468872e052bdf5e1737980a1a3baee914c75c88db44b9ac8de7ddc4278988ca6cb159496b6560cecd6bb51d6352725009e97d268afb  celery-4.3.0.tar.gz
+sha512sums="f0261de9e04dee27cb9984ad560ac63e4fe3fe262433906fb4cd5b175ff100bc02f5c529b27d73d268d1bddf9e7a4a7bfca3a2c6d5c7f01d8e056594ebff7a32  celery-4.4.0.tar.gz
 f9458bce0d8990de646df564bec96baa0e45867f44e41380d38520905e00c941b1ce261314bb78edaa14c591e0aa9386d24c58a61f69fb0fecc616c34a24dea1  celery.confd
 ff8c0451efa7157fd61f2335f4187bef6cbdd51856c7cfad4de02244c6c5ca7c584f9108731b52f020fee866365d9f092ded266c90d13cb34e92a7ffb63fed57  celery.initd"
