--- a/main/xkeyboard-config/APKBUILD
+++ b/main/xkeyboard-config/APKBUILD
@@ -1,18 +1,17 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xkeyboard-config
-pkgver=2.28
+pkgver=2.29
 pkgrel=0
 pkgdesc="X keyboard configuration files"
 url="http://www.freedesktop.org/wiki/Software/XKeyboardConfig"
 arch="noarch"
 license="MIT"
 subpackages="$pkgname-doc"
-makedepends="xkbcomp intltool libx11-dev libxslt"
+makedepends="xkbcomp intltool libx11-dev libxslt python3"
 source="https://www.x.org/archive/individual/data/xkeyboard-config/xkeyboard-config-$pkgver.tar.bz2
 	"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -25,16 +24,14 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	rm -f "$pkgdir"/usr/share/X11/xkb/compiled
 	install -m755 -d "$pkgdir"/var/lib/xkb
 	mkdir -p "$pkgdir"/usr/lib
 	mv "$pkgdir"/usr/share/pkgconfig "$pkgdir"/usr/lib
 }
-sha512sums="be38e61a7d3a1c03f9dc92fed5aada65fdb8b42272e874e01156a39de07f2a7c81846e9ba449aeb95661587f8d05217d549a1315ee0dd92facbb6158362e68ae  xkeyboard-config-2.28.tar.bz2"
+sha512sums="202255af097f3063d76341d1b4a7672662dc645f9bcd7afa87bc966a41db4c20fc6b8f4fbe2fcaec99b6bc458eac10129141a866a165857c46282f6705b78670  xkeyboard-config-2.29.tar.bz2"
