--- a/main/gnu-efi/APKBUILD
+++ b/main/gnu-efi/APKBUILD
@@ -4,7 +4,7 @@ pkgver=3.0.11
 pkgrel=0
 pkgdesc="Development Libraries and headers for EFI"
 url="ftp://ftp.hpl.hp.com/pub/linux-ia64"
-arch="all !s390x !ppc64le"
+arch="all !armhf !s390x !ppc64le"
 license="BSD-3-Clause"
 subpackages="$pkgname-dev"
 depends_dev="$pkgname"
