main/perl-plack: upgrade to 1.0047

--- a/main/perl-plack/APKBUILD
+++ b/main/perl-plack/APKBUILD
@@ -3,45 +3,40 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=perl-plack
 _pkgreal=Plack
-pkgver=1.0033
-pkgrel=1
+pkgver=1.0047
+pkgrel=0
 pkgdesc="Perl Superglue for Web frameworks and Web Servers (PSGI toolkit)"
-url="http://search.cpan.org/dist/Plack/"
+url="https://plackperl.org/"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-file-sharedir perl-filesys-notify-simple perl-devel-stacktrace
+depends="perl perl-file-sharedir perl-filesys-notify-simple perl-devel-stacktrace
 	perl-stream-buffered perl-uri perl-devel-stacktrace-ashtml perl-http-body
 	perl-test-tcp perl-try-tiny perl-apache-logformat-compiler
 	perl-hash-multivalue perl-http-message"
-cpanmakedepends="perl-test-requires"
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends perl-file-sharedir-install"
+makedepends="perl-dev perl-test-requires perl-file-sharedir-install"
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/M/MI/MIYAGAWA/$_pkgreal-$pkgver.tar.gz"
+options="!check" # missing dependencies
+source="https://cpan.metacpan.org/authors/id/M/MI/MIYAGAWA/Plack-$pkgver.tar.gz"
 
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="bb9335605a103380b06932289d6e99ae9cf58e98fd889542373ef2509269a6e251f1908c168482c455b5b590c8a883072b08c3a7fbfe6596ec60d699e71b2c33  Plack-1.0033.tar.gz"
+sha512sums="95fa7b7c1cc4d94bc077e69b52a6555e6f62e0119a29cb932f554e70a3466e8bb416b5a8e02c2a11c45f60e87fd01ed469c80a1c19c1a2eba7ba5ad2263e994c  Plack-1.0047.tar.gz"
