community/virt-manager: security upgrade to 2.2.1

--- a/community/virt-manager/APKBUILD
+++ b/community/virt-manager/APKBUILD
@@ -1,43 +1,42 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=virt-manager
-pkgver=2.1.0
-pkgrel=2
+pkgver=2.2.1
+pkgrel=0
 pkgdesc="GUI for managing virtual machines"
 url="https://virt-manager.org/"
 arch="noarch"
 license="GPL-2.0-or-later"
 depends="python3 $pkgname-common py3-libxml2 py3-libvirt"
 _common_deps="libvirt-glib py3-gobject3 py3-requests spice-gtk vte3 libosinfo py3-cairo gtk-vnc>=0.5.2-r2"
-makedepends="intltool grep glib"
+makedepends="intltool glib"
 subpackages="$pkgname-doc $pkgname-lang
 	$pkgname-common
 	virt-install:virt_install"
-source="https://releases.pagure.org/$pkgname/$pkgname-$pkgver.tar.gz"
-builddir="$srcdir"/$pkgname-$pkgver
+source="https://releases.pagure.org/virt-manager/$pkgname-$pkgver.tar.gz"
+
+# secfixes:
+#   2.2.1-r0:
+#     - CVE-2019-10183
 
 build() {
-	cd "$builddir"
 	python3 setup.py build
 }
 
 check() {
-	cd "$builddir"
 	python3 setup.py check
 }
 
 package() {
-	cd "$builddir"
 	python3 setup.py --no-update-icon-cache --no-compile-schemas install --root "$pkgdir"
-	python3 -m compileall "${pkgdir}/usr/share/virt-manager"
-	python3 -O -m compileall "${pkgdir}/usr/share/virt-manager"
+	python3 -m compileall "$pkgdir/usr/share/virt-manager"
+	python3 -O -m compileall "$pkgdir/usr/share/virt-manager"
 }
 
 common() {
 	pkgdesc="Common files used by virt-manager and virt-install"
 	depends="$_common_deps"
 	mkdir -p "$subpkgdir"/usr/share/virt-manager "$subpkgdir"/usr/bin
-	mv "$pkgdir"/usr/share/virt-manager/virtcli \
-		"$pkgdir"/usr/share/virt-manager/virtconv \
+	mv "$pkgdir"/usr/share/virt-manager/virtconv \
 		"$pkgdir"/usr/share/virt-manager/virtinst \
 		"$subpkgdir"/usr/share/virt-manager
 }
@@ -56,4 +55,4 @@ virt_install() {
 		"$subpkgdir"/usr/bin/
 }
 
-sha512sums="48590ff58246e13b73c7ab741ca854bfebae27fb90a891168db5d3fac1d066cce603f83b8d993e70e387624f911fc8503abe488e7992bc50f49d7e980aed5afb  virt-manager-2.1.0.tar.gz"
+sha512sums="aa97af52b3552c087beab8701762c21e8e6d818c9787d5376ed4e1ae40a34d5e8870c4c00fda9cb17a2340d1dff5b17e853182df720cdd9ea4c91cf01502a33a  virt-manager-2.2.1.tar.gz"
