testing/ldc: replace "pip install" with apk package

--- a/testing/ldc/APKBUILD
+++ b/testing/ldc/APKBUILD
@@ -2,14 +2,15 @@
 # Maintainer: Mathias LANG <pro.mathias.lang@gmail.com>
 pkgname=ldc
 pkgver=1.19.0
-pkgrel=0
+pkgrel=1
 pkgdesc="The LLVM-based D Compiler"
 url="https://github.com/ldc-developers/ldc"
 # Currently limited to x86_64 because of issues with GDC
 arch="x86_64"
 license="BSD-3-Clause AND BSL-1.0 AND ( Artistic-1.0 OR GPL-2.0-or-later ) AND NCSA AND MIT"
 depends="libexecinfo tzdata"
-makedepends="bash chrpath cmake curl-dev diffutils gdb gdmd grep llvm9-dev llvm9-static libedit-dev libexecinfo-static py-pip zlib-dev"
+makedepends="chrpath cmake curl-dev diffutils gdmd llvm9-dev llvm9-static libedit-dev libexecinfo-static zlib-dev"
+checkdepends="bash gdb grep llvm9-test-utils"
 # A user might want to install the '-runtime' subpackage when they have
 # a dynamically-linked D program.
 subpackages="$pkgname-runtime $pkgname-static"
@@ -51,9 +52,6 @@ build() {
 }
 
 check() {
-	# Dependency to lit-test
-	python -m pip install --user lit
-
 	# Note: The testsuite does not parallelize well, as the 'clean' target get run in parallel.
 	# Hence '-j${JOBS}' was left out on purpose
 	#
