main/lua-pty: upgrade to 1.2.2

--- a/main/lua-pty/APKBUILD
+++ b/main/lua-pty/APKBUILD
@@ -1,15 +1,13 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=lua-pty
 _pkgname=lpty
-pkgver=1.2.1
+pkgver=1.2.2
 _rockver=1
-pkgrel=1
+pkgrel=0
 pkgdesc="Lua module to control other programs via PTYs."
-url="http://www.tset.de/lpty/"
+url="https://www.tset.de/lpty/"
 arch="all"
 license="MIT"
-depends=""
-makedepends=""
 source="http://www.tset.de/downloads/$_pkgname-$pkgver-$_rockver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver-$_rockver"
 
@@ -20,10 +18,10 @@ for _v in $_luaversions; do
 done
 
 prepare() {
-	default_prepare || return 1
+	default_prepare
 
 	local lver; for lver in $_luaversions; do
-		cp -r "$builddir" "$builddir-$lver" || return 1
+		cp -r "$builddir" "$builddir-$lver"
 	done
 }
 
@@ -35,7 +33,7 @@ build() {
 		make CFLAGS="$CFLAGS -fPIC" \
 			LUA_INCDIR="$(pkg-config --variable=includedir lua$lver)" \
 			LUA_LIBDIR="$(pkg-config --variable=libdir lua$lver)" \
-			LUA=lua$lver || return 1
+			LUA=lua$lver
 	done
 }
 
@@ -58,4 +56,4 @@ _subpackage() {
 	echo 'rock_manifest = {}' > "$rockdir"/rock_manifest
 }
 
-sha512sums="46ffe9f5d9d70bda453c86965b218be4908a965e915aed5e0f4a788f85a8e67e88c9d5aea960048a584bfab08e02b64edfcfafa463bc3821dce056515380e692  lpty-1.2.1-1.tar.gz"
+sha512sums="6251f8394be53ab812bb3483fcd8280c9cf8d63590534864b439f5357a4c11507c3a7d6e03efa11018547435f7eede6ea5896a39f0d9ddaaf3f4f41f7827ba96  lpty-1.2.2-1.tar.gz"
