testing/motion: upgrade to 4.3.0

--- a/testing/motion/APKBUILD
+++ b/testing/motion/APKBUILD
@@ -3,24 +3,21 @@
 # Contributor: Mika Havela <mika.havela@gmail.com>
 # Maintainer: Mika Havela <mika.havela@gmail.com>
 pkgname=motion
-pkgver=4.2.2
+pkgver=4.3.0
 pkgrel=0
 pkgdesc="Detect if a significant part of the picture has changed (e.g. from a webcam)."
 url="https://motion-project.github.io"
 arch="all"
 options="!check"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 pkgusers="motion"
 pkggroups="motion"
-depends="jpeg v4l-utils ffmpeg"
-depends_dev=""
-makedepends="$depends_dev autoconf automake bash jpeg-dev v4l-utils-dev linux-headers
-			ffmpeg-dev libmicrohttpd-dev libwebp-dev
-			"
+depends="v4l-utils ffmpeg"
+makedepends="$depends_dev autoconf automake bash gettext-dev v4l-utils-dev linux-headers
+	libjpeg-turbo-dev ffmpeg-dev libmicrohttpd-dev libwebp-dev"
 install="$pkgname.pre-install"
 subpackages="$pkgname-doc $pkgname-openrc"
-# ffmpeg4.patch courtesy of Arch Linux
-source="$pkgname-$pkgver.tar.gz::https://github.com/Motion-Project/$pkgname/archive/release-$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/Motion-Project/motion/archive/release-$pkgver.tar.gz
 	motion.confd
 	motion.initd
 	"
@@ -33,7 +30,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--without-pgsql \
 		--without-mysql \
@@ -45,15 +41,13 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	install -d -o "$pkgusers" -g "$pkggroups" "$pkgdir"/var/run/motion
 	install -d -o "$pkgusers" -g "$pkggroups" "$pkgdir"/var/lib/motion    # Default config is configured to store captures here
 	install -Dm644 "$srcdir"/"$pkgname".confd "$pkgdir"/etc/conf.d/"$pkgname"
 	install -Dm755 "$srcdir"/"$pkgname".initd "$pkgdir"/etc/init.d/"$pkgname"
-	install -Dm644 COPYING "$pkgdir"/usr/share/licenses/$pkgname/COPYING
 }
 
-sha512sums="d6a1df1f7ddf8e3dc8fe3f7a1639de1ea67e63323d928c5c8b3bd34ee4edcb034c6723c3cc5d05ff1dd95802cd8efb4362cfcb68064ec5884272efa8f57daa20  motion-4.2.2.tar.gz
+sha512sums="cb1854b27526c865e9878c8fe2da662459f41b5fbe327b7265c5db6c67a2b31a1e08cac1ffd7b9d10cd3e7b11fff03129b1b1ce52f23d16ffcee6ac002411766  motion-4.3.0.tar.gz
 8a67b5b0360924e58ba3136a737ce73bb43201a49b2b6e2c632426561b830f6ab55cbbeaa89be7f1683aa8fd322b4f31b9f560e67a93eaceb964c9f56ceef363  motion.confd
 be30f19595dba27f2d0ca8133c93e134161781935a152bd1701e581410039e37742acd11987c38e6e64f495b1fd2b0a74a8c61ae0e6e211a475fca7994172501  motion.initd"
