--- a/testing/supertux/APKBUILD
+++ b/testing/supertux/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: alpterry <alpterry@protonmail.com>
 pkgname=supertux
 pkgver=0.6.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Open-source classic 2D jump'n run sidescroller game"
 url="https://www.supertux.org/"
 arch="all !s390x" # build fails
@@ -11,7 +11,9 @@ depends="$pkgname-data"
 makedepends="boost-dev cmake curl-dev freetype-dev glew-dev libpng-dev libvorbis-dev openal-soft-dev physfs-dev sdl2-dev sdl2_image-dev"
 subpackages="$pkgname-doc $pkgname-data::noarch"
 options="!check" # no test suite
-source="https://github.com/SuperTux/supertux/releases/download/v$pkgver/SuperTux-v$pkgver-Source.tar.gz"
+source="https://github.com/SuperTux/supertux/releases/download/v$pkgver/SuperTux-v$pkgver-Source.tar.gz
+	1152743f0bd369b4e1d3ff822e9d309fc7dac3e2.patch
+	"
 builddir="$srcdir/SuperTux-v$pkgver-Source"
 
 build() {
@@ -41,4 +43,5 @@ data() {
 	mv "$pkgdir"/usr/share/games "$subpkgdir"/usr/share/games
 }
 
-sha512sums="38a1da2a0546aa7fb98ece307b35a7e03a154b018d4b732592d3a718fd6c8ba827f3f8d99f0df777b7f438c0294c1838185ea7e60cc08f8cdb6f9a46b440e860  SuperTux-v0.6.1-Source.tar.gz"
+sha512sums="38a1da2a0546aa7fb98ece307b35a7e03a154b018d4b732592d3a718fd6c8ba827f3f8d99f0df777b7f438c0294c1838185ea7e60cc08f8cdb6f9a46b440e860  SuperTux-v0.6.1-Source.tar.gz
+0683b6c6ec8cf9d78ea0c973405a4ef26ab85cd72619483d0e5aef4bc0650d23a7e4b8a2484b5e3447433560a1d42225a61fb224b1fae6c2f0effb4ca622ec84  1152743f0bd369b4e1d3ff822e9d309fc7dac3e2.patch"
