testing/physfs: remove test program from package
physfs does not have any automatic tests - the check() function
just builts a "test_physfs" program that is installed into the package.

--- a/testing/physfs/APKBUILD
+++ b/testing/physfs/APKBUILD
@@ -2,15 +2,15 @@
 # Maintainer:
 pkgname=physfs
 pkgver=3.0.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Library providing access to various archives, for use in video games"
 url="https://icculus.org/physfs/"
 arch="all"
 license="Zlib"
-depends_dev="ncurses-dev"
-makedepends="cmake $depends_dev"
+makedepends="cmake"
 subpackages="$pkgname-static $pkgname-dev"
 source="https://icculus.org/physfs/downloads/physfs-$pkgver.tar.bz2"
+options="!check" # no tests
 
 build() {
 	if [ "$CBUILD" != "$CHOST" ]; then
@@ -23,12 +23,9 @@ build() {
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
+		-DPHYSFS_BUILD_TEST=OFF \
 		$CMAKE_CROSSOPTS
 	make
-}
-
-check() {
-	make test_physfs
 }
 
 package() {
