--- a/community/qt5-qtdeclarative/APKBUILD
+++ b/community/qt5-qtdeclarative/APKBUILD
@@ -7,9 +7,9 @@ _ver=${_ver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _v=${_ver/rc/RC}
-pkgrel=1
+pkgrel=2
 pkgdesc="Qt5 - QtDeclarative component"
-url="http://qt-project.org/"
+url="https://www.qt.io/developers/"
 arch="all" # Broken on armhf, upstream bug report https://bugreports.qt.io/browse/QTBUG-65246
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 makedepends="qt5-qtbase-dev python3"
@@ -19,7 +19,7 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_v.tar.xz
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_v.tar.xz
 	qt-musl-stackbottom.patch
 	"
 
