--- a/community/qt5-qttools/APKBUILD
+++ b/community/qt5-qttools/APKBUILD
@@ -6,7 +6,7 @@ _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _V=${_ver/rc/RC}
-pkgrel=0
+pkgrel=1
 pkgdesc="Qt5 - QtTool components"
 url="https://www.qt.io/developers/"
 arch="all"
@@ -18,7 +18,7 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz
 	assistant-qt5.desktop
 	designer-qt5.desktop
 	linguist-qt5.desktop
