--- a/community/qt5-qtvirtualkeyboard/APKBUILD
+++ b/community/qt5-qtvirtualkeyboard/APKBUILD
@@ -3,9 +3,9 @@
 pkgname=qt5-qtvirtualkeyboard
 _pkgname="${pkgname/qt5-/}-everywhere-src"
 pkgver=5.12.5
-pkgrel=1
+pkgrel=2
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
-url="http://qt-project.org/"
+url="https://www.qt.io/developers/"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 pkgdesc="Virtual keyboard framework"
 depends_dev="qt5-qtsvg-dev"
