--- a/community/qt5-qtwebkit/APKBUILD
+++ b/community/qt5-qtwebkit/APKBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtwebkit
 pkgver=5.9.1
-pkgrel=7
+pkgrel=8
 pkgdesc="Qt5 - QtWebKit components"
-url="http://qt-project.org/"
+url="https://www.qt.io/developers/"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="qt5-qtdeclarative-dev gstreamer-dev gst-plugins-base-dev
@@ -36,7 +36,7 @@ case $pkgver in
 *) _rel=official_releases;;
 esac
 
-source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtwebkit-opensource-src-$_v.tar.xz
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtwebkit-opensource-src-$_v.tar.xz
 	pic.patch
 	fix-rpath.patch
 	fix-execinfo.patch
