--- a/community/qt5-qtwebsockets/APKBUILD
+++ b/community/qt5-qtwebsockets/APKBUILD
@@ -8,9 +8,9 @@ _ver=${_ver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _V=${_ver/rc/RC}
-pkgrel=0
+pkgrel=1
 pkgdesc="Provides WebSocket communication compliant with RFC 6455"
-url="http://qt-project.org/"
+url="https://www.qt.io/developers/"
 arch="all"
 license="GPL-3.0"
 makedepends="qt5-qtbase-dev"
