--- a/community/qt5-qtsensors/APKBUILD
+++ b/community/qt5-qtsensors/APKBUILD
@@ -7,9 +7,9 @@ _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _v=${_ver/rc/RC}
-pkgrel=0
+pkgrel=1
 pkgdesc="+The Qt Sensors API provides access to sensor hardware via QML and C++"
-url="http://qt-project.org/"
+url="https://www.qt.io/developers/"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 options="!check" #upstream does not provide check
@@ -20,7 +20,7 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtsensors-everywhere-src-$_v.tar.xz"
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtsensors-everywhere-src-$_v.tar.xz"
 
 builddir="$srcdir/$_pkgname-${_v%-*}"
 
