--- a/community/qt5-qtwayland/APKBUILD
+++ b/community/qt5-qtwayland/APKBUILD
@@ -3,9 +3,9 @@
 pkgname=qt5-qtwayland
 _pkgname="${pkgname/qt5-/}-everywhere-src"
 pkgver=5.12.5
-pkgrel=2
+pkgrel=3
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
-url="http://qt-project.org/"
+url="https://www.qt.io/developers/"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 pkgdesc='Provides APIs for Wayland'
 makedepends="$depends_dev libxkbcommon-dev libxcomposite-dev
