--- a/community/qt5-qtwebengine/APKBUILD
+++ b/community/qt5-qtwebengine/APKBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtwebengine
 pkgver=5.12.5
-pkgrel=3
+pkgrel=4
 pkgdesc="Qt5 - QtWebEngine components"
-url="http://qt-project.org/"
+url="https://www.qt.io/developers/"
 # ppc64le, s390x: not supported
 arch="all !ppc64le !s390x !armhf" # armhf blocked by qt5-qtdeclarative
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
@@ -60,7 +60,7 @@ case $pkgver in
 *) _rel=official_releases;;
 esac
 
-source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtwebengine-everywhere-src-$_v.tar.xz
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtwebengine-everywhere-src-$_v.tar.xz
 	arm-void-is-not-android.patch
 	qt-musl-dispatch_to_musl.patch
 	qt-musl-execinfo.patch
