--- a/community/qt5-qtx11extras/APKBUILD
+++ b/community/qt5-qtx11extras/APKBUILD
@@ -8,9 +8,9 @@ _ver=${_ver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _V=${_ver/rc/RC}
-pkgrel=0
+pkgrel=1
 pkgdesc="Provides platform-specific APIs for X11"
-url="http://qt-project.org/"
+url="https://www.qt.io/developers/"
 arch="all"
 license="GPL-3.0"
 makedepends="qt5-qtbase-dev"
@@ -21,7 +21,7 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz"
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz"
 
 builddir="$srcdir"/$_pkgname-${_V%-*}
 
