--- a/testing/qt-creator/APKBUILD
+++ b/testing/qt-creator/APKBUILD
@@ -3,10 +3,10 @@
 pkgname=qt-creator
 _pkgname=qt-creator-opensource-src
 pkgver=4.11.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Lightweight and cross-platform IDE for Qt"
 url="https://qt-project.org/wiki/Category:Tools::QtCreator"
-arch="all !ppc64le !s390x !armhf" # armhf blocked by qt5-qtdeclarative
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="GPL-3.0-only WITH Qt-GPL-exception-1.0"
 depends="
 	qt5-qtbase-sqlite
@@ -23,7 +23,7 @@ makedepends="
 	qt5-qtquickcontrols2-dev
 	"
 ldpath="/usr/lib/qtcreator:/usr/lib/qtcreator/plugins"
-source="http://download.qt-project.org/official_releases/qtcreator/${pkgver%.*}/$pkgver/$_pkgname-$pkgver.tar.gz
+source="https://download.qt.io/official_releases/qtcreator/${pkgver%.*}/$pkgver/$_pkgname-$pkgver.tar.xz
 	fix-execinfo.patch
 	"
 
@@ -44,5 +44,5 @@ package() {
 	# 	"$pkgdir"/usr/share/applications/qtcreator.desktop
 }
 
-sha512sums="29e5c72d4002cdddecbdea689dd5048aa8d0b74c980a6b8096b03c3c39f4868e4490c4516ba287a4082eaaa4ec412309c1d498a4f97754720c88ae4ab53d30b8  qt-creator-opensource-src-4.11.0.tar.gz
+sha512sums="a0eef2df7ad9ae171facef4ccc08652243153bb0b29b3af531ba2d0bd93a09d043b2e87d79450dedf18c01b57ad5c474a44a942a9e27553211a5722740c840af  qt-creator-opensource-src-4.11.0.tar.xz
 416bf589487aa0a86df01cb07088d1bf316bb7b765753b870634be8f697c17a47a93c2240258e8f1707fe8e0137b8cbc1a7b85250986ede3bffb87c6c5f75311  fix-execinfo.patch"
